@@ -1,6 +1,6 @@
 {
   "name": "total5",
-  "version": "0.0.13-8",
+  "version": "0.0.13-9",
   "description": "Total.js framework v5",
   "main": "index.js",
   "directories": {
