@@ -23,6 +23,7 @@
 - fixed removing of multiple spaces in the `String.toName()` method
 - fixed a problem with case-sensitive characters in the route parameters
 - fixed markdown parser
+- added missing ViewEngine `@{meta(...)}` method
 
 ========================
 0.0.12
